--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "node-steam-openid": "^1.1.0",
+    "socket.io": "^4.7.1",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6"
   }
