--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "clipboardy": "^3.0.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -17,6 +18,7 @@
     "node-steam-openid": "^1.1.0",
     "socket.io": "^4.7.1",
     "sqlite": "^4.2.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "steam-js-api": "^1.1.0"
   }
 }
