--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "better-sqlite3": "^8.5.0",
     "clipboardy": "^3.0.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
