--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "node-fetch": "^2.7.0",
     "node-steam-openid": "^1.1.0",
     "semver": "^7.5.4",
     "socket.io": "^4.7.1",
