--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
     "moment": "^2.29.4",
     "node-fetch": "^2.7.0",
     "node-steam-openid": "^1.1.0",
