--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.2.0",
     "moment": "^2.29.4",
+    "node-cron": "^4.1.0",
     "node-fetch": "^2.7.0",
     "node-steam-openid": "^1.1.0",
     "semver": "^7.5.4",
