changing to vercel, removed keys.json, added to .env, removed port 80 and 443 binding, and added vercel.json

--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,12 @@
 NODE_ENV=production
 ENVIRO=prod
 REDIRECT_TARGET=https://whatcanweplay.today
+
+# Steam API Configuration
+STEAM_KEY=236EE9EBC3E90B18F367C0B09235CB94
+SESSION_SECRET=!Wince-Tarantula-Badge3-Legal8-Turmoil-Bagginess?
+SITE_URL=https://whatcanweplay.today
+
+# SSL Certificate Paths
+SSL_KEY_PATH=C:/Certbot/live/whatcanweplay.today/privkey.pem
+SSL_CERT_PATH=C:/Certbot/live/whatcanweplay.today/fullchain.pem
