--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,12 @@
 NODE_ENV=development
 ENVIRO=dev
 REDIRECT_TARGET=http://localhost:3000
+
+# Steam API Configuration
+STEAM_KEY=236EE9EBC3E90B18F367C0B09235CB94
+SESSION_SECRET=!Wince-Tarantula-Badge3-Legal8-Turmoil-Bagginess?
+SITE_URL=https://whatcanweplay.today
+
+# SSL Certificate Paths (not used in dev)
+SSL_KEY_PATH=
+SSL_CERT_PATH=
