--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.56.1",
     "axios": "^1.4.0",
     "better-sqlite3": "^11.10.0",
     "clipboardy": "^3.0.0",
