--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "better-sqlite3": "^11.10.0",
     "clipboardy": "^3.0.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
