updated to work locally with supabase

--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ REDIRECT_TARGET=http://localhost:3000
 # Steam API Configuration
 STEAM_KEY=236EE9EBC3E90B18F367C0B09235CB94
 SESSION_SECRET=!Wince-Tarantula-Badge3-Legal8-Turmoil-Bagginess?
-SITE_URL=https://whatcanweplay.today
+SITE_URL=http://localhost:3000
 
 # SSL Certificate Paths (not used in dev)
 SSL_KEY_PATH=
