--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,12 @@
 # Production Environment Configuration
 NODE_ENV=production
 ENVIRO=prod
-REDIRECT_TARGET=https://whatcanweplay.today
+REDIRECT_TARGET=https://www.whatcanweplay.today
 
 # Steam API Configuration
 STEAM_KEY=236EE9EBC3E90B18F367C0B09235CB94
 SESSION_SECRET=!Wince-Tarantula-Badge3-Legal8-Turmoil-Bagginess?
-SITE_URL=https://whatcanweplay.today
+SITE_URL=https://www.whatcanweplay.today
 
 # SSL Certificate Paths
 SSL_KEY_PATH=C:/Certbot/live/whatcanweplay.today/privkey.pem
