removed forced redirect from all code

--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,14 @@
 # Production Environment Configuration
 NODE_ENV=production
 ENVIRO=prod
-REDIRECT_TARGET=https://www.whatcanweplay.today
+REDIRECT_TARGET=
 
 # Steam API Configuration
 STEAM_KEY=236EE9EBC3E90B18F367C0B09235CB94
 SESSION_SECRET=!Wince-Tarantula-Badge3-Legal8-Turmoil-Bagginess?
-SITE_URL=https://www.whatcanweplay.today
+# Leave SITE_URL empty so previews/default domains are used
+SITE_URL=
+ENFORCE_CANONICAL=false
 
 # SSL Certificate Paths
 SSL_KEY_PATH=C:/Certbot/live/whatcanweplay.today/privkey.pem
