--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6",
     "steam-js-api": "^1.1.0"
+  },
+  "devDependencies": {
+    "supabase": "^2.40.7"
   }
 }
